# CudaSift

./: CMakeLists.txt  CudaSift.kdev4  cudaImage.cu  cudaImage.h  cudaSiftH.cu  geomFuncs.cpp  mainSift.cpp  match.cu  matching.cu  sift_interface.cpp  sift_interface.h  tic_toc.h
.kdev4/: CudaSift.kdev4
